Add ability to check off Todo items on front-end

--- a/themes/simple/css/layout.css
+++ b/themes/simple/css/layout.css
@@ -32,6 +32,12 @@
  * @author Your Name <email@silverstripe.com>
  * ------------------------------------------------------- */
 
+ul.todo-sets > li {
+	list-style: none;
+	float: left;
+	width: 220px;
+}
+
 /* OOCSS Grid
 * https://github.com/stubbornella/oocss/wiki/grids
 */
